test/darwin/fail/write02.v3
//@execute = true
component write02 {
	def STDERR: int = 2;
	def main() -> bool {
		var str = "The quick brown fox jumped over the lazy dog.";
		var buf = Pointer.atContents(str);
		var r = Darwin.write(STDERR, buf, str.length);
		return r == str.length;
	}
}
